--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
 /.venv
 /.vscode
 /__pycache__
-/model.h5
-/data
 /.devcontainer
 /PDF
-/model.bin
 /.ipynb_checkpoints
-/notebooks/.ipynb_checkpoints
-/data_spam
-/notebooks/spam.ipynb
-/test_spam_model.py
-/presentacion_spam_model.md
-/spam_model.pkl
+/classification_model/__pycache__
+/classification_model/data
+/classification_model/markdown
+/classification_model/media
+/classification_model/notebooks
+/classification_model/model.bin
+/classification_model/model.h5
+/spam_model/data
+/spam_model/notebooks
+/spam_model/in.txt
+/spam_model/out.txt
+/spam_model/spam_model.pkl
+/spam_model/test_spam_model.py
